# 275_mini1_threadCrew

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OaA/: README.md  ServiceRequest.cpp  ServiceRequestOoA.cpp  ServiceRequestOoA.h  main.cpp  queries.h
OaAcopy/: ServiceRequestOoA.cpp  ServiceRequestOoA.h  main
multi-thread/include/: DateTime.h  IDataReader.h
multi-thread/src/: DataStore.cpp
multi_thread/: README.md  ServiceRequest.cpp  ServiceRequest.h  benchmark.sh  benchmark_results.txt  build  build.sh  main  main.cpp  mainc.cpp  multi_thread_output.txt  optimizations.md  output_version1  readme.md  tasks.md
optimized/: README.md  ServiceRequest.cpp  ServiceRequest.h  build  design.md  main  main.cpp  queries.cpp  queries.h  requirements.md
single-thread/: main.cpp
single-thread/include/: CsvReader.h  DataStore.h  NYC311Analyzer.h  ServiceRequest.h
single_thread/: README.md  build  main.cpp  main1.cpp  mainc.cpp  output_version1  single_thread_app  single_thread_output.txt
src/: CsvReader.cpp  DateTime.cpp  NYC311Analyzer.cpp  ServiceRequest.cpp
